--- a/Android App/app/src/main/AndroidManifest.xml
+++ b/Android App/app/src/main/AndroidManifest.xml
@@ -15,13 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOV.noActionBar">
         <activity
-            android:name=".DetailActivity"
-            android:exported="true" />
-        <activity
             android:name=".HomeActivity"
-            android:exported="true" />
-        <activity
-            android:name=".onboarding.OnboardingOneActivity"
             android:exported="true" />
         <activity
             android:name=".onboarding.OnboardingTwoActivity"
@@ -47,6 +41,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
