Itinerary done and push result

--- a/Android App/app/src/main/AndroidManifest.xml
+++ b/Android App/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOV.noActionBar">
         <activity
-            android:name=".DetailActivity"
+            android:name=".ResultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ItineraryActivity"
             android:exported="true" />
         <activity
             android:name=".HomeActivity"
